[+] macd divergence statistics processing